EGL_MESA_query_renderer support
Hi there. I'm currently working on making Firefox switch from GLX to EGL on X11, in order to unify the code paths of X11 and Wayland. One piece that's missing here is a way to query vendor and device ids, provided by GLX_MESA_query_renderer
. In order to not rely on GLX (and therefore also X11 in the Wayland case), a EGL_MESA_query_renderer
extension would be very helpful.
I found some pre-existing work on that, the last one being a WIP patch on the mailing list. Is anyone aware of further work and/or does somebody plan to work on it? (if not I would be interested as well, but time...).
Note:
- Sandboxed (Flatpak) Wayland applications with the
fallback-x11
, which disallows Xserver connections in Wayland session, can't fall back toGLX_MESA_query_renderer
. - Gnome Shell has a experimental feature to start Xwayland on demand for a while now which might get switched on by default in 3.38. Having to start up the whole Xserver just to query two ids would be quite sad :/