xfce4-about: Use GdkGLContext for system tab

Although the current code runs on Wayland it is obviously X11-specific
and would be disabled later when the --disable-x11 build flag is
introduced.

The GLX_MESA_query_renderer extension does not appear to have a Wayland
counterpart at present. See also
https://gitlab.freedesktop.org/mesa/mesa/-/issues/2976

Formatting is fixed in next commit.